# skippy-system-manager

./: .dockerignore  .editorconfig  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  .script_index.json  316875965_UsageDetails.xlsx  CHANGELOG.md  CLAUDE_CODE_REFERENCE.md  CLEANUP_SUMMARY_20251111.md  CONTRIBUTING.md  DEBUG_FINDINGS.md  DEBUG_FINDINGS_2025-11-12.md  Dockerfile  ENHANCEMENT_PROJECT_COMPLETE_SUMMARY.md  ENHANCEMENT_PROJECT_STATUS.md  FINAL_SECURITY_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  IMPROVEMENT_RECOMMENDATIONS.md  MIGRATION_GUIDE.md  Makefile  PATH_TO_100_PERCENT.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE2_IMPLEMENTATION_SUMMARY.md  PROJECT_ARCHITECTURE.md  PROTOCOL_100_PERCENT_ACHIEVEMENT.md  PROTOCOL_DEBUG_REPORT_2025-11-10.md  PROTOCOL_IMPROVEMENTS_COMPLETE_2025-11-10.md  PROTOCOL_SYSTEM_KNOWN_LIMITATIONS.md  PULL_REQUEST_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE_NEW_TOOLS.md  README.md  REPOSITORY_ANALYSIS.md  SCRIPT_INDEX.json  SCRIPT_INDEX.md  SCRIPT_STATUS.md  (+19 more)
.claude/: CLAUDE.md  CLAUDE_OPTIMIZED.md  README.md  claude.md  mcp.json  settings.json  settings.local.full.json  settings.local.json  settings.local.restricted.json
.claude/agents/: README.md  code-reviewer.md
.claude/commands/: authorize_claude.md  brain.md  check-downloads.md  check-uploads.md  claude-health.md  clean-screenshots.md  content-approve.md  deploy-verify.md  ebon-status.md  error-logs.md  fact-check.md  fix-permissions.md  gdrive-upload.md  git-branches.md  mcp-health.md  mcp-status.md  pre-commit.md  recover-session.md  refresh-memory.md  scan.md  screenshot.md  security-audit.md  session-summary.md  start-screenshot-cleanup.md  start-watcher.md  status.md  stock-photo.md  stop-watcher.md  system-cleanup.md  transcript.md  validate-content.md  watcher-status.md  wordpress-debug.md  wp-deploy.md
.claude/hooks/: on-startup.sh  persist_permissions.sh  session_end_cleanup.sh
.claude/output-styles/: wordpress-dev.md
.claude/permission-profiles/: README.md  script-dev-restrictive.json  wordpress-permissive.json
.claude/protocols/: database_operations_protocol.md  file_naming_standards.md  git_workflow_protocol.md  security_incident_protocol.md  wordpress_update_protocol.md
.claude/reference/: quick_facts.md
.claude/workflows/: backup_workflow.md  content_migration_workflow.md  (+3 more)
.dashboard/: metrics_1762282119.json
.devcontainer/: devcontainer.json  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_TEMPLATE.md
.ssh/: config  id_ed25519  id_ed25519.pub  id_rsa  id_rsa.pub  known_hosts  known_hosts.old
Documentation/: Networks.html  Spin up your own Ethereum node.html  media-server-setup-session-2025-08-12.md
Networks_files/: 0b7eecdf3f54618f.css  9c4e2130-fdb1d5254159cbd4.js  configs_004.php  configs_005.php  f97e080b-66591cdd1908f6d0.js  webpack-9f0b8cf66f4acc9a.js
claude/: UPLOAD_PROTOCOL.md
conversations/: 100_percent_activation_complete_20251102.md  2025-08-24_document_organization_session.md  2025-10-07_credit_dispute_package_creation.txt  COMPREHENSIVE_ANALYSIS_ALL_SESSIONS_2025-11-01.md  DAVE_BIGGERS_CAMPAIGN_FACT_SHEET_2025-11-01.md  DAVE_BIGGERS_WEBSITE_COMPREHENSIVE_SUMMARY_2025-11-02.md  ENHANCEMENT_IMPLEMENTATION_PLAN.md  INDEX.md  LIVE_SITE_UPGRADE_CHECKLIST_2025-11-01.md  POLICY_INTERNAL_LINKING_STRATEGY_2025-11-04.md  PROBLEM_ANALYSIS_AND_PREVENTION_2025-11-04.md  PROOFREADING_CORRECTIONS_FINAL_REPORT_2025-11-01.md  PROOFREADING_CORRECTIONS_REPORT_2025-11-01.md  PROOFREADING_DEPLOYMENT_SUMMARY_2025-11-01.md  PROTOCOL_CREATION_COMPLETION_SUMMARY.md  PROTOCOL_DEBUG_FIXES_SUMMARY_2025-11-04.md  PROTOCOL_INDEX.md  SECURITY_FIXES_IMPLEMENTED_2025-11-04.md  SECURITY_HARDENING_COMPLETE_2025-11-04.md  SECURITY_VULNERABILITY_ASSESSMENT_2025-11-04.md  SESSION_SUMMARY_ENHANCEMENT_PROJECT_2025-11-04.md  SKIPPY_ENHANCEMENT_PROJECT_TRACKER.md  SKIPPY_IMPROVEMENT_RECOMMENDATIONS_2025-11-04.md  TIER_2_COMPLETION_SUMMARY.md  TIER_3_COMPLETION_SUMMARY.md  URGENT_FIXES_NEEDED_2025-11-04.md  WORDPRESS_SITE_INVESTIGATION_2025-11-04.md  _shared_severity_definitions.md  access_control_protocol.md  alert_management_protocol.md  all_improvements_applied_20251102.md  authorization_protocol.md  auto_transcript_protocol.md  avery_label_printing_setup_session_2025-10-26.md  backup_strategy_protocol.md  budget_3.0_publishing_session_2025-10-13.md  budget_audit_complete_summary_2025-11-02.md  budget_audit_correction_deployment_session_2025-11-02.md  budget_document_audit_and_updates_2025-10-19.md  campaign_enhancements_20251102.md  (+136 more)
docs/: RESILIENCE_ARCHITECTURE.md
documentation/: FIRST_TIME_SETUP.md  MCP_SERVER_INSTALLATION_STATUS.md  MCP_SERVER_RECOMMENDATIONS.md  PROTOCOL_GOVERNANCE.md  PROTOCOL_QUICK_REFERENCE.md  PROTOCOL_VERSION_CHANGELOG.md  SECRETS_MANAGEMENT_GUIDE.md  SESSION_START_CHECKLIST.md  TODO.md  WORK_FILES_PRESERVATION_PROTOCOL.md  media-server-setup-session-2025-08-12.md  protocol_metrics_dashboard.html  quickbooks_final_summary_2026-01-20.md  quickbooks_reconciliation_2026-01-20.md  quickbooks_reconciliation_analysis_2026-01-22.md  quickbooks_reconciliation_analysis_2026-01-23.md  setting_up_home_network_-_claude.html  skill_effectiveness.csv
examples/: README.md
google_drive/: 1927  MyDatabase  Registration Application for Tax Account Number  Review and sign document(s) | Docusign  Untitled.afdesign  automotive   crypto_transactions_record_20250119_035254.csv  decibelcustoms1st.afdesign  home automation   security picture
intelligent_file_processor/: QUICK_START.md  SETUP_API_KEY.sh  START.sh  file_processor_daemon.py  requirements.txt
logs/: file_processor.db
networks_files/: 30a37ab2-9d8e8c4521afcfbf.js  6bfcb6449677b683.css  configs.php  configs_002.php  configs_003.php  configs_006.php
notes/: TODO.md
scripts/: README.md  backup_excludes.txt  cleanup  cleanup_work_files.sh  ebonhawk-maintenance.service  readme.md
tests/: README.md  __init__.py  conftest.py  protocol_regression_tests_v1.0.0.sh  test_deployment_readiness.sh  test_resilience.py  test_robustness_system.sh
(+1279 files in other folders)
