[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skippy-system-manager"
version = "2.0.0"
description = "Comprehensive automation and management suite for infrastructure, WordPress, and system administration"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Skippy Development Team", email = "dev@example.com"}
]
maintainers = [
    {name = "Skippy Development Team", email = "dev@example.com"}
]
keywords = [
    "automation",
    "system-management",
    "wordpress",
    "devops",
    "infrastructure",
    "mcp-server",
    "backup",
    "monitoring"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Unix Shell",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities"
]

dependencies = [
    "fastmcp>=0.1.0",
    "mcp>=1.1.0",
    "psutil>=5.9.0",
    "httpx>=0.24.0",
    "paramiko>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.1",
    "pytest-timeout>=2.1.0",
    "pytest-mock>=3.11.1",
    "pytest-asyncio>=0.21.0",
    "pylint>=2.17.0",
    "flake8>=6.0.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.4.0",
    "bandit>=1.7.5",
    "safety>=2.3.5",
    "pre-commit>=3.3.0",
]

test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.1",
    "pytest-timeout>=2.1.0",
    "pytest-mock>=3.11.1",
    "pytest-asyncio>=0.21.0",
    "faker>=19.2.0",
    "freezegun>=1.2.2",
    "responses>=0.23.1",
]

docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=2.0.0",
]

all = [
    "skippy-system-manager[dev,test,docs]"
]

[project.urls]
Homepage = "https://github.com/eboncorp/skippy-system-manager"
Documentation = "https://github.com/eboncorp/skippy-system-manager/tree/main/documentation"
Repository = "https://github.com/eboncorp/skippy-system-manager"
"Bug Tracker" = "https://github.com/eboncorp/skippy-system-manager/issues"
Changelog = "https://github.com/eboncorp/skippy-system-manager/blob/main/CHANGELOG.md"

[project.scripts]
skippy = "skippy_cli:main"
skippy-mcp = "mcp_servers.general_server.server:main"

[tool.setuptools]
packages = ["lib.python", "mcp_servers.general_server"]

[tool.setuptools.package-data]
"lib.python" = ["*.py"]
"mcp_servers.general_server" = ["*.py"]

# ============================================================================
# Black - Code Formatter
# ============================================================================
[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | env
  | __pycache__
  | \.pytest_cache
  | \.mypy_cache
  | archive
  | legacy_system_managers
  | conversations
)/
'''

# ============================================================================
# isort - Import Sorting
# ============================================================================
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = [
    "*/archive/*",
    "*/legacy_system_managers/*",
    "*/.venv/*",
    "*/venv/*"
]

# ============================================================================
# pytest - Testing Framework
# ============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*", "*Tests"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "-l",
    "-ra",
    "--strict-markers",
    "--cov=lib/python",
    "--cov=mcp_servers",
    "--cov-report=html:htmlcov",
    "--cov-report=term-missing",
    "--cov-fail-under=60",
]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (slower, require external services)",
    "slow: Slow-running tests",
    "security: Security-related tests",
    "wordpress: WordPress-specific tests",
    "network: Tests requiring network access",
    "ssh: Tests requiring SSH connectivity",
    "docker: Tests requiring Docker",
    "smoke: Smoke tests (quick validation)",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

# ============================================================================
# mypy - Type Checking
# ============================================================================
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# ============================================================================
# pylint - Linting
# ============================================================================
[tool.pylint.main]
max-line-length = 100
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
    "W0511",  # fixme
    "W0703",  # broad-except
]

[tool.pylint.reports]
output-format = "colorized"
reports = false
score = true

# ============================================================================
# coverage - Code Coverage
# ============================================================================
[tool.coverage.run]
source = ["lib/python", "mcp_servers"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/*_test.py",
    "*/venv/*",
    "*/.venv/*",
    "*/archive/*",
    "*/legacy_system_managers/*",
]

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@overload",
]

[tool.coverage.html]
directory = "htmlcov"

# ============================================================================
# bandit - Security Linting
# ============================================================================
[tool.bandit]
exclude_dirs = ["/tests", "/venv", "/.venv", "/archive", "/legacy_system_managers"]
skips = ["B101", "B601"]  # Allow assert, shell=True (with caution)

# ============================================================================
# commitizen - Commit Message Convention
# ============================================================================
[tool.commitizen]
name = "cz_conventional_commits"
version = "2.0.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
    "lib/python/__init__.py:__version__"
]
